# Astrobot

./: .dockerignore  Dockerfile  LICENSE  Pipfile  README.md  bot.py  main.py  pyproject.toml  utils.py
cogs/commands/: chatgpt.py
config/: __init__.py  config.py
models/: __init__.py  models.py
utils/: custom_help.py  exceptions.py  mentions.py  utils.py
